NTR: fix subscription symbol

--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
@@ -84,7 +84,7 @@
                                                :label="$tc('mollie-payments.subscriptions.detail.labelAmount')"
                                                disabled="disabled">
                                     <template slot="suffix">
-                                        {{ subscription.currency }}
+                                        {{ subscription.currency.symbol }}
                                     </template>
                                 </sw-text-field>
                             {% endblock %}
