--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -156,6 +156,7 @@ SHOPWARE 6.4
                                      :max="shippableQuantity(item)"
                                      v-model:value="shipQuantity"
                                      v-model="shipQuantity"
+                                     class="cy-ship-quantity"
                     >
                         <template #prefix>
                             {{ $tc('mollie-payments.modals.shipping.item.summary.quantity') }}
