--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-tracking-info/mollie-tracking-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-tracking-info/mollie-tracking-info.html.twig
@@ -20,14 +20,17 @@
         <sw-container columns="1fr" justify="start" gap="16px">
             <sw-text-field v-model:value="tracking.carrier"  v-model="tracking.carrier"
                            :label="$tc('mollie-payments.modals.shipping.tracking.carrier')"
+                           class="cy-trackiing-carrier"
                            size="medium"
                            required/>
             <sw-text-field v-model:value="tracking.code" v-model="tracking.code"
                            :label="$tc('mollie-payments.modals.shipping.tracking.code')"
                            size="medium"
+                           class="cy-tracking-code"
                            required/>
             <sw-text-field v-model:value="tracking.url" v-model="tracking.url"
                            size="medium"
+                           class="cy-tracking-url"
                            :label="$tc('mollie-payments.modals.shipping.tracking.url')"/>
         </sw-container>
     </sw-container>
