--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -38,7 +38,6 @@
 
 {% block page_product_detail_buy_form_inner %}
     {{ parent() }}
-
     {% block page_product_detail_buy_container_paypal_express %}
         {% if mollie_paypalexpress_enabled and ('pdp' not in mollie_paypalexpress_restrictions) %}
             {% block page_product_detail_buy_container_mollie_paypal_express_component %}
@@ -49,8 +48,7 @@
                     {% if mollie_csrf_available %}
                         {% include '@MolliePayments/storefront/csrf/components/paypal-express-button-csrf.twig' %}
                     {% endif %}
-
-                    <input type="hidden" name="productId" value="{{ product.id }}">
+                    <input type="hidden" name="productId" value="{{ product.id }}" />
                     <input
                             type="hidden"
                             name="quantity"
