--- a/src/Resources/views/mollie/head.html.twig
+++ b/src/Resources/views/mollie/head.html.twig
@@ -9,7 +9,6 @@
         'frontend.detail.page' : 'pdp'
     } %}
 
-
     {% set currentRoute = app.request.attributes.get('_route') %}
     {% set includeJsInHeader = false %}
 
@@ -28,19 +27,11 @@
         {% endif %}
     {% endif %}
 
-    {% if includeJsInHeader == true and mollie_javascript_check_duplicate === true %}
-        {% for script in theme_scripts() %}
-            {% if script == 'js/mollie-payments/mollie-payments.js' %}
-                {% set includeJsInHeader = false %}
-            {% endif %}
-        {% endfor %}
-    {% endif %}
-
     <script>
         window.mollie_javascript_use_shopware = '{{ mollie_javascript_use_shopware }}'
     </script>
 
-    {% if mollie_javascript_use_shopware != '1' and includeJsInHeader == true %}
+    {% if mollie_javascript_already_exists == false and mollie_javascript_use_shopware != '1' and includeJsInHeader == true %}
         <script type="text/javascript" src="{{ asset('bundles/molliepayments/mollie-payments.js', 'asset') }}" defer></script>
     {% endif %}
 
