--- a/src/Components/Subscription/Services/Installer/Mails/RenewalReminder/de.html
+++ b/src/Components/Subscription/Services/Installer/Mails/RenewalReminder/de.html
@@ -6,7 +6,7 @@ Wir bereiten Ihr Abonnement für Sie vor.<br />
 <br />
 <strong>Abonnement</strong>: {{ subscription.description }}<br />
 <strong>Nächste Verlängerung</strong>: {{ subscription.nextPaymentAt | date("m / d / Y", false) }}.<br />
-<strong>Gesamtbetrag</strong>: {{ subscription.amount }} {{ subscription.currency }}<br />
+<strong>Gesamtbetrag</strong>: {{ subscription.amount }} {{ subscription.currency.symbol }}<br />
 <br />
 Diese E-Mail soll Sie nur darüber informieren, dass die Zahlung an diesem Datum erfasst wird.<br/>
 <br/>
