--- a/src/Components/Subscription/Services/Installer/Mails/RenewalReminder/en.html
+++ b/src/Components/Subscription/Services/Installer/Mails/RenewalReminder/en.html
@@ -6,7 +6,7 @@ We are getting your subscription ready for you.<br />
 <br />
 <strong>Subscription</strong>: {{ subscription.description }}<br />
 <strong>Next Renewal</strong>: {{ subscription.nextPaymentAt | date("m / d / Y", false) }}.<br />
-<strong>Total Amount</strong>: {{ subscription.amount }} {{ subscription.currency }}<br />
+<strong>Total Amount</strong>: {{ subscription.amount }} {{ subscription.currency.symbol }}<br />
 <br />
 This e-mail is just to inform you that the payment is going to be captured on this date.<br/>
 <br/>
