PISHPS-229: add bancomat pay (#724)
* NTR: Squashed commit of the following:

commit 70fe37e90ccacd1c97748110e21300c1cb16ccc5
Author: Vitalij Mik <BlackScorp@users.noreply.github.com>
Date:   Mon Mar 18 15:17:08 2024 +0100

    NTR: update mollie lbirary (#723)

    Co-authored-by: Vitalij Mik <vitalij.mik@dasistweb.de>

* NTR: PISHPS-229: add bancomat pay

* NTR: remove console.log

* NTR: eslint fix

* NTR: Squashed commit of the following:

commit 190312956939ae38704df683ac6cc23d4fd106d3
Author: Vitalij Mik <BlackScorp@users.noreply.github.com>
Date:   Tue Mar 19 08:33:14 2024 +0100

    NTR: add the default system language (#726)

    Co-authored-by: Vitalij Mik <vitalij.mik@dasistweb.de>

commit 77be51e0e1e193b8fca00086831caea4700e25f9
Author: Vitalij Mik <BlackScorp@users.noreply.github.com>
Date:   Tue Mar 19 08:32:52 2024 +0100

    NTR: PISHPS-256: rebranding ideal (#725)

    Co-authored-by: Vitalij Mik <vitalij.mik@dasistweb.de>

commit 70fe37e90ccacd1c97748110e21300c1cb16ccc5
Author: Vitalij Mik <BlackScorp@users.noreply.github.com>
Date:   Mon Mar 18 15:17:08 2024 +0100

    NTR: update mollie lbirary (#723)

    Co-authored-by: Vitalij Mik <vitalij.mik@dasistweb.de>

* NTR: fix pr

* NTR: hide bancomat in order edit

* NTR: bancomat pay numer ist noch required

---------

Co-authored-by: Vitalij Mik <vitalij.mik@dasistweb.de>

--- a/src/Resources/views/storefront/component/payment/payment-method.html.twig
+++ b/src/Resources/views/storefront/component/payment/payment-method.html.twig
@@ -41,5 +41,7 @@
         {% sw_include '@MolliePayments/storefront/component/payment/component/ideal-fields.html.twig' %}
     {% elseif payment.translated.customFields.mollie_payment_method_name == 'pointofsale' %}
         {% sw_include '@MolliePayments/storefront/component/payment/component/pos-fields.html.twig' %}
+    {% elseif payment.translated.customFields.mollie_payment_method_name == 'bancomatpay' %}
+        {% sw_include '@MolliePayments/storefront/component/payment/component/bancomat-fields.html.twig' %}
     {% endif %}
 {% endblock %}
