NTR: PISHPS-273: fix subscription button in diffferent languages
fix #719

--- a/src/Resources/views/storefront/page/checkout/address/register.html.twig
+++ b/src/Resources/views/storefront/page/checkout/address/register.html.twig
@@ -5,7 +5,7 @@
 
      {% set isMollieSubscription = false %}
      {% for element in page.cart.data.elements %}
-         {% if(element._entityName == "product" and element.customFields.mollie_payments_product_subscription_enabled) %}
+         {% if(element._entityName == "product" and element.translated.customFields.mollie_payments_product_subscription_enabled) %}
              {% set isMollieSubscription = true %}
          {% endif %}
      {% endfor %}
