Revert "PISHPS-265: remove ideal issuer dropdown (#743)"
This reverts commit 09ab3b41b2d4771482d134152235d941f8bd7766.

--- a/src/Resources/views/storefront/component/payment/payment-fields.html.twig
+++ b/src/Resources/views/storefront/component/payment/payment-fields.html.twig
@@ -31,6 +31,8 @@
         {% sw_include '@MolliePayments/storefront/component/payment/component/cc-fields.html.twig' with {
             showIfActive: false
         } %}
+    {% elseif payment.translated.customFields.mollie_payment_method_name == 'ideal' %}
+        {% sw_include '@MolliePayments/storefront/component/payment/component/ideal-fields.html.twig' %}
     {% elseif payment.translated.customFields.mollie_payment_method_name == 'pointofsale' %}
         {% sw_include '@MolliePayments/storefront/component/payment/component/pos-fields.html.twig' %}
     {% elseif payment.translated.customFields.mollie_payment_method_name == 'bancomatpay' %}
