--- a/src/Resources/views/storefront/component/payment/payment-method.html.twig
+++ b/src/Resources/views/storefront/component/payment/payment-method.html.twig
@@ -37,6 +37,8 @@
             showIfActive: (payment.id is same as(selectedPaymentMethodId)),
             sw64: true
         } %}
+    {% elseif payment.translated.customFields.mollie_payment_method_name == 'ideal' %}
+        {% sw_include '@MolliePayments/storefront/component/payment/component/ideal-fields.html.twig' %}
     {% elseif payment.translated.customFields.mollie_payment_method_name == 'pointofsale' %}
         {% sw_include '@MolliePayments/storefront/component/payment/component/pos-fields.html.twig' %}
     {% elseif payment.translated.customFields.mollie_payment_method_name == 'bancomatpay' %}
