NTR: Merge master into PPE

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -5,3 +5,4 @@
 @import "./account/subscriptions";
 @import "./component/credit-card-mandate";
 @import "./component/paypal-express-button";
+@import "./display";
