--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -202,7 +202,7 @@ SHOPWARE 6.4
         </sw-modal>
     {% endblock %}
     {% block sw_order_line_items_grid_grid_mollie_cancel_item_modal %}
-        <mollie-cancel-item @close="closeCancelItemModal" v-if="isMollieOrder && cancelItemModal === item.id" :item="getCancelData(item)">
+        <mollie-cancel-item @close="closeCancelItemModal" @update-cancel-status="loadMollieCancelStatus" v-if="isMollieOrder && cancelItemModal === item.id" :item="getCancelData(item)">
 
         </mollie-cancel-item>
     {% endblock %}
