NTR: added payconiq payment

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-external-link/mollie-external-link.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-external-link/mollie-external-link.scss
@@ -5,7 +5,7 @@
     font-size: 12px;
     text-decoration: underline;
     cursor: pointer;
-
+    text-align: right;
     &:hover,
     &:focus {
         color: $color-shopware-brand-600;
