--- a/src/Resources/views/mollie/component/apple-pay-direct-button.twig
+++ b/src/Resources/views/mollie/component/apple-pay-direct-button.twig
@@ -1,4 +1,5 @@
 {% block mollie_apple_pay_direct %}
+
     <div class="mollie-apple-pay-direct {{ cols }}">
         {% if page.product %}
             {# this is for older shopware versions #}
@@ -32,6 +33,11 @@
         <input type="hidden" name="mode" value="{{ mode }}"/>
 
         {% block mollie_apple_pay_direct_button %}
+
+            {% if mollie_express_required_data_protection %}
+                {% sw_include '@Storefront/storefront/component/privacy-notice.html.twig' %}
+            {% endif %}
+
             <button type="submit" data-shop-url="{{ seoUrl('frontend.home.page') }}" class="btn btn-primary btn-block btn-buy apple-pay-button-with-text apple-pay-button-black js-apple-pay w-100 d-none">
                 {# space to match height other buttons #}
                 &nbsp;
