NTR: use express buttons as class selector

--- a/src/Resources/views/mollie/component/apple-pay-direct-button.twig
+++ b/src/Resources/views/mollie/component/apple-pay-direct-button.twig
@@ -38,7 +38,7 @@
                 {% sw_include '@Storefront/storefront/component/privacy-notice.html.twig' %}
             {% endif %}
 
-            <button type="submit" data-shop-url="{{ seoUrl('frontend.home.page') }}" class="btn btn-primary btn-block btn-buy apple-pay-button-with-text apple-pay-button-black js-apple-pay w-100 d-none">
+            <button type="submit" data-shop-url="{{ seoUrl('frontend.home.page') }}" class="btn btn-primary btn-block btn-buy apple-pay-button-with-text apple-pay-button-black js-apple-pay mollie-express-button w-100 d-none">
                 {# space to match height other buttons #}
                 &nbsp;
                 {# end important spacer #}
